# ai-harness-tester

./: .gitignore  AGENTS.md  Cargo.toml  DECISIONS.md  EVALUATOR_DESIGN.md  IDEAS.md  README.md  build-harnesses.sh  config.json  launch_interface.sh  run.sh
crates/docker-runner/: Cargo.toml
crates/docker-runner/src/: lib.rs
crates/llm-proxy/: Cargo.toml
crates/llm-proxy/src/: anthropic_handlers.rs  anthropic_sse.rs  chat_handlers.rs  handlers.rs  lib.rs  streaming.rs  tests.rs
crates/llm-proxy/src/chat_handlers/: tests.rs
crates/orchestrator-cli/: Cargo.toml
crates/orchestrator-cli/src/: config.rs  evaluation.rs  main.rs  models.rs  run.rs
crates/orchestrator-core/: Cargo.toml
crates/orchestrator-core/src/: config.rs  lib.rs  models.rs  output.rs  test_selection.rs  util.rs
harnesses/claudecode/: Dockerfile  run.sh
harnesses/github-copilot/: Dockerfile  run.sh
harnesses/opencode/: Dockerfile  run.sh
harnesses/pi/: Dockerfile  run.sh
harnesses/smoke/: Dockerfile  run.sh
interface/: .gitignore  index.html  package-lock.json  package.json  tsconfig.app.tsbuildinfo  tsconfig.node.tsbuildinfo  vite.config.ts
interface/src/: App.tsx  data.ts  format.ts  proxy.ts  routes.ts  styles.css  types.ts  useHashRoute.ts
interface/src/views/: BatchDetail.tsx  BatchList.tsx  ProxyLogViewer.tsx  RunDetail.tsx
tests/create-3d-printer-webpage-html/: PROMPT.md  evaluate.py  evaluate.sh
tests/create-3d-printer-webpage-npm/: PROMPT.md  evaluate.py  evaluate.sh
tests/create-geodesic-chess/: PROMPT.md  evaluate.Dockerfile  evaluate.py  evaluate.sh
tests/create-geodesic-chess/rules/: Geodesic Chess.html  RULES.md
tests/create-geodesic-chess/rules/Geodesic Chess_files/: 4-467801-298050-165466  epn-smart-tools.js  global.css
tests/create-pelican/: PROMPT.md  evaluate.Dockerfile  evaluate.py  evaluate.sh
tests/smoke/: PROMPT.md  evaluate.py  evaluate.sh
