[workspace]
members = ["crates/orchestrator-cli"]
resolver = "2"

[workspace.package]
edition = "2021"
rust-version = "1.78"
license = "MIT"

[workspace.dependencies]
clap = { version = "4.5.38", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
time = { version = "0.3.44", features = ["formatting", "macros"] }
zip = { version = "0.6.6", default-features = false, features = ["deflate"] }
