[workspace]
members = ["crates/orchestrator-cli", "crates/orchestrator-core", "crates/docker-runner", "crates/llm-proxy"]
resolver = "2"

[workspace.package]
edition = "2021"
rust-version = "1.78"
license = "MIT"

[workspace.dependencies]
clap = { version = "4.5.38", features = ["derive"] }
axum = "0.7.9"
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls", "stream"] }
tokio = { version = "1.48.0", features = ["fs", "io-util", "macros", "net", "rt-multi-thread", "sync"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
time = { version = "0.3.44", features = ["formatting", "macros"] }
zip = { version = "0.6.6", default-features = false, features = ["deflate"] }
ureq = { version = "2.12.1", features = ["json"] }
tempfile = "3.19.0"
fastrand = "2.3.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
