[package]
name = "llm-proxy"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
axum.workspace = true
fastrand.workspace = true
futures-util = "0.3.32"
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
time.workspace = true
tokio.workspace = true
tokio-stream = "0.1.18"

[dev-dependencies]
tempfile.workspace = true
ureq.workspace = true
