[package]
name = "orchestrator-cli"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "orchestrator"
path = "src/main.rs"

[dependencies]
clap.workspace = true
llm-proxy = { path = "../llm-proxy" }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
time.workspace = true
tokio.workspace = true
zip.workspace = true
ureq.workspace = true
