[package]
name = "orchestrator-core"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
time.workspace = true
zip.workspace = true
ureq.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile.workspace = true
